--- a/demo/merchant.htm
+++ b/demo/merchant.htm
@@ -118,7 +118,7 @@
             getToken: getToken,
             onPaymentAuthorize: onPaymentAuthorize
 
-        }).renderPopup();
+        }).renderLightbox();
     }
 
 
