--- a/demo/addcontent.html
+++ b/demo/addcontent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-    
+
 <!-- Script in order to add more content in the html page -->
-<script src="../dist/checkout-components.js"></script>
+<script src="../dist/paypal.checkout.v4.js"></script>
 
 <style>
     body {
