Use mock token generator for demo

--- a/demo/addcontent.html
+++ b/demo/addcontent.html
@@ -36,7 +36,7 @@
 
     function addcontent() {
         var a = document.getElementById('addstuff');
-        a.innerHTML = 'Welcome to the Office of Graduate Studies at Georgia Tech!Whether you are an' +
+        a.innerHTML += 'Welcome to the Office of Graduate Studies at Georgia Tech!Whether you are an' +
                 ' applicant, a currently enrolled student, a member of the faculty or staff, or just exploring options ' +
                 'for graduate study at Georgia Tech, we hope you will spend some time navigating the wealth of ' +
                 'information and resources available via this site.The mission of the Office of Graduate Studies is ' +
