--- a/demo/merchant_lightbox.htm
+++ b/demo/merchant_lightbox.htm
@@ -79,16 +79,9 @@
     ppxo.PayPalCheckout.contexts.lightbox = true;
 
     function getToken(callback) {
-        jQuery.ajax({
-            url: 'http://xotoolslvs01.qa.paypal.com/~dbrain/aries.cgi?local=1&onlytoken=1&stage=msmaster',
-            method: 'post',
-            success: function(token) {
-                return callback(null, token.trim());
-            },
-            error: function() {
-                return callback(new Error('There was an error retrieving the token'));
-            }
-        });
+        setTimeout(function() {
+            callback(null, 'EC-XYZ123456789ABCDE');
+        }, 1500);
     }
 
     function onPaymentAuthorize(token) {
