Add loading spinner to initial checkout template

--- a/demo/button.htm
+++ b/demo/button.htm
@@ -21,8 +21,7 @@
 
             url: './checkout.htm',
 
-            token: button.props.token,
-            getToken: button.props.getToken,
+            paymentToken: button.props.paymentToken,
             onPaymentAuthorize: button.props.onPaymentAuthorize,
             onPaymentComplete: button.props.onPaymentComplete
         });
