--- a/demo/addcontent.html
+++ b/demo/addcontent.html
@@ -19,7 +19,7 @@
 
     var checkout = ppxo.PayPalCheckout.attach({
         onEnter: function() {
-            this.props.getToken().then(function(token) {
+            this.props.paymentToken().then(function(token) {
                 ecToken = token;
                 console.log('got paypal token!', token);
             });
